Fixed Discounted Price Bugs

--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -386,7 +386,7 @@
 
     <!-- Offer Cards -->
     <section id="socialProof" class="social-proof">
-      <img src="../assets/muscular-silhouette.png" alt="Meet Your Coach" class="social-proof__coach" />
+      <img src="../assets/muscular-silhouette.webp" alt="Muscular Man" class="social-proof__coach" />
       <p class="social-proof__headline">
         947 people bought workout plans in the last hour
       </p>
@@ -641,7 +641,7 @@
                 document.getElementById('paypalCancelNote')
                   ?.style.setProperty('display', 'inline');
               }
-            }, 15_000);
+            }, 5000);
           },
 
           createSubscription: (_, actions) => {
