--- a/client/pages/sign-up.html
+++ b/client/pages/sign-up.html
@@ -122,7 +122,7 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
           <span class="error-message" id="confirm-error" role="alert"></span>
         </div>
   
-        <button type="submit" class="signup-btn">Claim Your Program</button>
+        <button type="submit" class="signup-btn">Claim My Plan</button>
       </form>
   
       <p class="terms">
