Updated Renewal Price

--- a/old/4-week-program.html
+++ b/old/4-week-program.html
@@ -25,7 +25,7 @@
   <p>Click below to generate and download your two PDFs: Workouts & Nutrition.</p>
 
   <!-- Single button that triggers both PDF downloads -->
-  <button id="download4WeekBtn" class="buttons">Download 4-Week Program</button>
+  <button id="download4WeekBtn" class="buttons">Download 4-Week Program Hi</button>
 
   <!-- ===============================
        PDF 1: Workouts Container
