--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -206,7 +206,7 @@
 
 
   <div class="whats-included-container">
-    <h2 class="wi2-heading">Inside Your All-In-One Tracker</h2>
+    <h2 class="wi2-heading">Inside Your Plan</h2>
     <p class="wi2-description">Everything you need to stay consistent — workouts, meals, and progress that adjust as you
       go.</p>
 
@@ -214,29 +214,29 @@
       <!-- LEFT: Subheadings with 50px margin between them -->
       <div class="wi2-left">
         <div class="wi2-item active ct-item" data-index="0">
-          <h4><span class="tick ct-tick">✔</span> Tailored From Day One</h4>
+          <h4><span class="tick ct-tick">✔</span> Personalized Workout Plan</h4>
         </div>
         <div class="wi2-item ct-item" data-index="1">
-          <h4><span class="tick ct-tick">✔</span> Track Workouts, Earn XP</h4>
+          <h4><span class="tick ct-tick">✔</span> Clear and easy to follow</h4>
         </div>
         <div class="wi2-item pt-item" data-index="2">
-          <h4><span class="tick pt-tick">✔</span> Adaptive Progression Engine</h4>
+          <h4><span class="tick pt-tick">✔</span> Visible Results in 4 Weeks</h4>
         </div>
         <div class="wi2-item pt-item" data-index="3">
-          <h4><span class="tick pt-tick">✔</span> Macro-Matched Meals</h4>
+          <h4><span class="tick pt-tick">✔</span> Progress tracking and analysis</h4>
         </div>
-        <div class="wi2-item pt-item" data-index="4">
-          <h4><span class="tick pt-tick">✔</span> Flexible Logging, Your Way</h4>
+        <!-- <div class="wi2-item pt-item" data-index="4">
+          <h4><span class="tick pt-tick">✔</span> Flexible Logging</h4>
         </div>
         <div class="wi2-item ct-item" data-index="5">
-          <h4><span class="tick ct-tick">✔</span> Daily Streaks That Stick</h4>
+          <h4><span class="tick ct-tick">✔</span> Daily Streaks</h4>
         </div>
         <div class="wi2-item pt-item" data-index="6">
           <h4><span class="tick pt-tick">✔</span> Your Fitness Story, Visualized</h4>
         </div>
         <div class="wi2-item pt-item" data-index="7">
           <h4><span class="tick pt-tick">✔</span> One Score That Tracks It All</h4>
-        </div>
+        </div> -->
       </div>
 
 
@@ -260,9 +260,38 @@
       </div>
     </div>
   </div>
+  
+  <section class="app-social-proof" aria-label="App social proof">
+  <div class="asp-inner">
+
+    <!-- Laurel + headline -->
+    <div class="asp-laurels" aria-hidden="true">
+      <!-- left leaf -->
+
+      <h3 class="asp-headline">
+        <span class="asp-number">10&nbsp;Million+</span>
+        <br>
+        kick‑started their journey with us
+      </h3>
+
+    </div>
+
+    <!-- rating + store badges -->
+    <div class="asp-rating">
+      <span class="asp-stars" aria-label="Star rating">★★★★★</span>
+      <span class="asp-score">4.7&nbsp;/&nbsp;5</span>
+
+      <!-- store badges – use your own assets if you prefer -->
+      <img src="../assets/apple-pay-mark.webp" alt="App Store" loading="lazy">
+      <img src="../assets/google-play.png" alt="Google Play" loading="lazy">
+    </div>
+
+    <p class="asp-reviews">250&nbsp;000+ five‑star reviews from happy users</p>
+  </div>
+</section>
 
   <div class="results-section " id="results-section">
-    <h2 class="results-heading">
+    <!-- <h2 class="results-heading">
       Adapts to You. Built to Last.
     </h2>
     <p class="results-description">
@@ -320,11 +349,11 @@
         });
       </script>
 
-    </section>
+    </section> -->
 
-    <h3 class="complete-workout-heading">
+    <h2 class="complete-workout-heading">
       Complete Workout Program
-    </h3>
+    </h2>
     <ul class="workout-benefits">
       <li>Workouts that adapt to your performance and evolve with you</li>
       <li>Macro-matched meals — precision without the logging stress</li>
