Added Login Dashboard

--- a/client/pages/dashboard.html
+++ b/client/pages/dashboard.html
@@ -216,7 +216,7 @@
       </p>
       <p class="mp-subtext"><span class="mp-subtext-emoji">🪞</span> Your progress deserves a full picture.</p>
 
-      <a href="soffer.html" class="cta pt-cta">🔓 Unlock Pro Tracker</a>
+      <a href="offer.html" class="cta pt-cta">🔓 Unlock Pro Tracker</a>
     </article>
   </main>
 
