Trying To Fix Dashboard Login

--- a/client/pages/log-in-dashboard.html
+++ b/client/pages/log-in-dashboard.html
@@ -71,7 +71,7 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
   <div class="login-container">
     <div class="login-box">
       <h2>Login</h2>
-      <!-- give the form an ID and disable native action -->
+      <!-- give the form an ID and disable native actions -->
       <form id="login-form" novalidate>
         <div class="input-group">
           <label for="email">Email</label>
