--- a/client/pages/dashboard.html
+++ b/client/pages/dashboard.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <title>My Dashboard</title>
 
-  <!-- Fonts + stylesheet -->
+  <!-- Fonts + stylesheets -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&family=Roboto:wght@400&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="../styles/dashboard.css">
