Updated Legal Docs

--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -260,35 +260,35 @@
       </div>
     </div>
   </div>
-  
+
   <section class="app-social-proof" aria-label="App social proof">
-  <div class="asp-inner">
+    <div class="asp-inner">
 
-    <!-- Laurel + headline -->
-    <div class="asp-laurels" aria-hidden="true">
-      <!-- left leaf -->
+      <!-- Laurel + headline -->
+      <div class="asp-laurels" aria-hidden="true">
+        <!-- left leaf -->
 
-      <h3 class="asp-headline">
-        <span class="asp-number">10&nbsp;Million+</span>
-        <br>
-        kick‑started their journey with us
-      </h3>
+        <h3 class="asp-headline">
+          <span class="asp-number">10&nbsp;Million+</span>
+          <br>
+          kick‑started their journey with us
+        </h3>
 
+      </div>
+
+      <!-- rating + store badges -->
+      <div class="asp-rating">
+        <span class="asp-stars" aria-label="Star rating">★★★★★</span>
+        <span class="asp-score">4.7&nbsp;/&nbsp;5</span>
+
+        <!-- store badges – use your own assets if you prefer -->
+        <img src="../assets/apple-pay-mark.webp" alt="App Store" loading="lazy">
+        <img src="../assets/google-play.png" alt="Google Play" loading="lazy">
+      </div>
+
+      <p class="asp-reviews">250&nbsp;000+ five‑star reviews from happy users</p>
     </div>
-
-    <!-- rating + store badges -->
-    <div class="asp-rating">
-      <span class="asp-stars" aria-label="Star rating">★★★★★</span>
-      <span class="asp-score">4.7&nbsp;/&nbsp;5</span>
-
-      <!-- store badges – use your own assets if you prefer -->
-      <img src="../assets/apple-pay-mark.webp" alt="App Store" loading="lazy">
-      <img src="../assets/google-play.png" alt="Google Play" loading="lazy">
-    </div>
-
-    <p class="asp-reviews">250&nbsp;000+ five‑star reviews from happy users</p>
-  </div>
-</section>
+  </section>
 
   <div class="results-section " id="results-section">
     <!-- <h2 class="results-heading">
@@ -578,8 +578,8 @@
         By proceeding, you confirm that you’ve read and agree to our
         <a href="tos.html" target="_blank">terms of service</a> and
         <a href="refund-policy.html" target="_blank">refund policy</a>.
-        If you choose the 12-Week Plan, it renews at £49.99/month unless cancelled. Cancellations take
-        effect at the end of the current billing cycle.
+        If you choose the 12-Week Plan, it renews at £49.99/month unless cancelled. Upon cancellation, one final £49.99
+        payment is processed, and access continues until the end of that final billing cycle.
       </p>
 
   </section>
