Updated Legal Docs

--- a/client/pages/tos.html
+++ b/client/pages/tos.html
@@ -81,9 +81,9 @@
     <p><strong>6.3 Cancellation of Subscriptions.</strong></p>
     <ul>
       <li>Cancel at any time via emailing support.</li>
-      <li><strong>Cancellations become effective at the end of the <em>following</em> Billing Cycle.</strong> When you
-        cancel, one final monthly payment will be processed immediately; access continues until the end of that final
-        cycle, after which no further charges will occur.</li>
+      <li><strong>Cancellations become effective at the end of the final Billing Cycle.</strong> One final monthly
+        payment will be processed on your next scheduled renewal date, and access will continue until the end of that
+        final cycle. No further charges will occur after that point.</li>
       <li>No pro‑rated refunds are provided for partial‑month usage.</li>
       <li>Charges already processed are final and non‑refundable except as required by law or under our Money‑Back
         Guarantee (see Refund & Cancellation Policy).</li>
@@ -105,7 +105,8 @@
     <h2>9. Health & Results Disclaimer</h2>
     <p>The Service provides general fitness and nutrition information for educational purposes. It is
       <strong>not</strong> medical advice. Consult a qualified healthcare professional before beginning any exercise or
-      dietary programme. Individual results vary and are not guaranteed.</p>
+      dietary programme. Individual results vary and are not guaranteed.
+    </p>
 
     <!-- 10. DISCLAIMER OF WARRANTIES -->
     <h2>10. Disclaimer of Warranties</h2>
