--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -578,8 +578,7 @@
         By proceeding, you confirm that you’ve read and agree to our
         <a href="tos.html" target="_blank">terms of service</a> and
         <a href="refund-policy.html" target="_blank">refund policy</a>.
-        If you choose the 12-Week Plan, it renews at £49.99/month unless cancelled. Upon cancellation, one final £49.99
-        payment is processed, and access continues until the end of that final billing cycle.
+        If you choose the 12-Week Plan, it renews at £49.99/month unless cancelled. Cancellations take effect at the end of the current billing cycle.
       </p>
 
   </section>
