--- a/client/index.html
+++ b/client/index.html
@@ -21,6 +21,7 @@
   <meta name="twitter:description"
     content="A smarter fitness tracker that adapts to your performance, meals, and lifestyle.">
   <meta name="twitter:image" content="https://raisingthebarapp.com/assets/og-preview.jpg">
+  <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32">
 
   <title>Raising The Bar</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
