--- a/client/pages/dashboard.html
+++ b/client/pages/dashboard.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32">
   <title>My Dashboard</title>
 
   <!-- Fonts + stylesheets -->
