--- a/client/pages/forms.html
+++ b/client/pages/forms.html
@@ -5,6 +5,7 @@
   <link rel="preload" as="image" href="../assets/rtb-logo-white-224.webp" fetchpriority="high">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32">
   <title>Let’s Personalize Your Plan</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&family=Roboto:wght@400&display=swap"
     rel="stylesheet">
