--- a/client/pages/kickstart-guide.html
+++ b/client/pages/kickstart-guide.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="../styles/1-week-program.css" />
+    <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32">
   <title>Kickstart Guide</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&family=Roboto:wght@400&display=swap"
