--- a/client/pages/legal-overview.html
+++ b/client/pages/legal-overview.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32">
   <title>Legal Information</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 	<link href="../styles/legal-overview.css" rel="stylesheet">
