--- a/client/pages/log-in-checkout.html
+++ b/client/pages/log-in-checkout.html
@@ -5,6 +5,7 @@
   <!-- Basic meta -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32">
 
   <title>Log in & Checkout</title>
 
