--- a/client/pages/privacy-policy.html
+++ b/client/pages/privacy-policy.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32">
   <title>Privacy Policy</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&family=Roboto:wght@400&display=swap" rel="stylesheet">
   <link href="../styles/privacy-policy.css" rel="stylesheet">
