--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -13,19 +13,20 @@
         headers: { 'Authorization': `Bearer ${token}` }
       });
       if (!res.ok) throw new Error();
+      const me = await res.json();
+      localStorage.setItem('userId', me._id);  // <-- save userId for later
     } catch (err) {
       localStorage.removeItem('token');
       location.href = 'log-in-offer.html';
       return;
     }
-    // If we get here, user is authenticated → do nothing
   })();
 </script>
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32">
   <title>Claim my plan</title>
   <!-- 1️⃣  LOAD the real Stripe SDK first (blocks parsing, 30 ms) -->
   <link rel="preconnect" href="https://js.stripe.com" crossorigin>
@@ -83,23 +84,25 @@
     }(window, document, 'ttq');
   </script>
   <!-- TikTok Pixel Code End -->
-<!-- Meta Pixel Code -->
-<script>
-!function(f,b,e,v,n,t,s)
-{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];
-s.parentNode.insertBefore(t,s)}(window, document,'script',
-'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '2589073464764526');
-fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
-/></noscript>
-<!-- End Meta Pixel Code -->
+  <!-- Meta Pixel Code -->
+  <script>
+    !function (f, b, e, v, n, t, s) {
+      if (f.fbq) return; n = f.fbq = function () {
+        n.callMethod ?
+          n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+      };
+      if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+      n.queue = []; t = b.createElement(e); t.async = !0;
+      t.src = v; s = b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t, s)
+    }(window, document, 'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '2589073464764526');
+    fbq('track', 'PageView');
+  </script>
+  <noscript><img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1" /></noscript>
+  <!-- End Meta Pixel Code -->
 </head>
 
 <body>
@@ -565,7 +568,8 @@ src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
         By proceeding, you confirm that you’ve read and agree to our
         <a href="tos.html" target="_blank">terms of service</a> and
         <a href="refund-policy.html" target="_blank">refund policy</a>.
-        If you choose the 12-Week Plan, it renews at <span class="renew-amt"></span>/month unless cancelled. Cancellations take effect at the end
+        If you choose the 12-Week Plan, it renews at <span class="renew-amt"></span>/month unless cancelled.
+        Cancellations take effect at the end
         of the current billing cycle.
       </p>
 
@@ -602,128 +606,100 @@ src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
       </div>
       <p id="planSummary" class="plan-summary"></p>
       <!-- PayPal -->
-      <div id="paypalMarkContainer" style="margin-top:20px;"></div>
+      <!-- <div id="paypalMarkContainer" style="margin-top:20px;"></div> -->
 
       <!-- keep this: SDK renders the real button inside -->
       <div id="paypal-button-container" class="visually-hidden"></div>
 
-      <!-- <div id="paypal-btn"></div>
+      <!-- PayPal SDK: GBP, vault, capture, buttons -->
+      <!-- <script
+        src="https://www.paypal.com/sdk/js?client-id=AcygnP6DJSFGbIeyUa2BdGdznCQQk-qXjMEMijIZJeTbzkIltNVCGL5k1i2DdcNR24qoGTDPF_FD_VQ8&vault=true&intent=capture&components=buttons&currency=GBP"></script> -->
 
-      <script
-        src="https://www.paypal.com/sdk/js?client-id=AcygnP6DJSFGbIeyUa2BdGdznCQQk-qXjMEMijIZJeTbzkIltNVCGL5k1i2DdcNR24qoGTDPF_FD_VQ8&currency=GBP&vault=true&intent=subscription"></script>
-
+      <!-- Where the button will render -->
+      <div id="paypal-btn" style="margin-top:16px;"></div>
       <script>
-        /* the two plan IDs */
-        const PLAN_DISCOUNT = 'P-38P197067S4343902NB4O32Y'; 
-        const PLAN_FULL = 'P-4FN65942RD4768921NB4PLMA'; 
+        document.addEventListener('DOMContentLoaded', async () => {
+          try {
+            // Get client token from your server
+            const ctRes = await fetch('/api/paypal/client-token');
+            if (!ctRes.ok) throw new Error('client-token failed: ' + (await ctRes.text()));
+            const { client_token } = await ctRes.json();
 
-        const planId = document.body.classList.contains('discount-active')
-          ? PLAN_DISCOUNT
-          : PLAN_FULL;
+            // Dynamically load the SDK and attach the client token on the script tag
+            await new Promise((resolve, reject) => {
+              const s = document.createElement('script');
+              s.src = 'https://www.paypal.com/sdk/js?client-id=AcygnP6DJSFGbIeyUa2BdGdznCQQk-qXjMEMijIZJeTbzkIltNVCGL5k1i2DdcNR24qoGTDPF_FD_VQ8&vault=true&intent=capture&components=buttons&currency=GBP';
+              s.setAttribute('data-client-token', client_token);
+              s.onload = resolve;
+              s.onerror = () => reject(new Error('PayPal SDK failed to load'));
+              document.head.appendChild(s);
+            });
 
-        paypal.Buttons({
-          style: { shape: 'rect', color: 'gold', layout: 'vertical', label: 'paypal' },
-          createSubscription: (_d, a) => a.subscription.create({ plan_id: planId }),
-          onApprove: () => window.location.href = '/pages/dashboard.html',
-          onError: err => console.error('PayPal error:', err)
-        }).render('#paypal-btn');
-      </script> -->
+            // Now render the button
+            paypal.Buttons({
+              createOrder: async () => {
+                const r = await fetch('/api/paypal/create-order-otp', {
+                  method: 'POST',
+                  headers: { 'Content-Type': 'application/json' },
+                  body: JSON.stringify({ amount: '0.99' })
+                });
+                if (!r.ok) throw new Error('create-order failed: ' + (await r.text()));
+                const { id } = await r.json();
+                return id;
+              },
 
-      <!-- two empty mounts -->
-      <div id="paypal-btn-discount"></div>
-      <div id="paypal-btn-full"></div>
+              onApprove: async (data) => {
+                const r = await fetch(`/api/paypal/capture/${data.orderID}`, { method: 'POST' });
+                if (!r.ok) throw new Error('capture failed: ' + (await r.text()));
+                const { capture, vault_id, vault_status } = await r.json();
 
-      <!-- PayPal SDK *with* onload -->
-      <div id="paypal-btn"></div>
-      <!-- 1️⃣  PayPal SDK – leave exactly one of these -->
-      <script
-        src="https://www.paypal.com/sdk/js?client-id=AcygnP6DJSFGbIeyUa2BdGdznCQQk-qXjMEMijIZJeTbzkIltNVCGL5k1i2DdcNR24qoGTDPF_FD_VQ8&currency=GBP&vault=true&intent=subscription&disable-funding=card">
-        </script>
+                console.log('PayPal capture:', capture);
+                console.log('vault_id:', vault_id);
 
-      <!-- 2️⃣  Inline script that actually makes the button -->
-      <script>
-        /* plan IDs */
-        const PLAN_DISCOUNT = 'P-16H14484TA859184CNB7AHUY';   // 99 p
-        const PLAN_FULL = 'P-2BG62815HH914120TNB7AJCA';   // £29.99
-        let ppNoteTimer = null;
-        /* create exactly one button, on the right mount */
-        paypal.Buttons({
-          style: { shape: 'rect', color: 'gold', layout: 'vertical', label: 'paypal' },
+                const userId = localStorage.getItem('userId');
+                if (vault_id && vault_status === 'VAULTED') {
+                  await fetch('/api/paypal/save-vault', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({
+                      userId,
+                      vault_id,
+                      orderID: data.orderID,
+                      captureID: capture?.purchase_units?.[0]?.payments?.captures?.[0]?.id
+                    })
+                  });
+                } else {
+                  console.log('Vaulting pending (status:', vault_status, '). Will be saved via webhook.');
+                }
+                try {
+                  await fetch('/api/paypal/save-vault', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({
+                      userId,
+                      vault_id,
+                      orderID: data.orderID,
+                      captureID: capture?.purchase_units?.[0]?.payments?.captures?.[0]?.id
+                    })
+                  });
+                } catch (e) {
+                  console.warn('save-vault failed (non-blocking)', e);
+                }
 
-          onClick: () => {
-            /* NEW: only start the 30 s countdown if the discount banner is live */
-            if (!document.body.classList.contains('discount-active')) return;
+                window.location.href = '/pages/dashboard.html';
+              },
 
-            clearTimeout(ppNoteTimer);          // kill any earlier countdown
-            ppNoteTimer = setTimeout(() => {
-              /* re‑check the deal hasn’t lapsed while we were waiting */
-              if (document.body.classList.contains('discount-active')) {
-                document.getElementById('paypalCancelNote')
-                  ?.style.setProperty('display', 'inline');
+              onError: (err) => {
+                console.error('PayPal error', err);
+                alert('There was a problem finishing checkout. Please try again.');
               }
-            }, 5000);
-          },
-
-          createSubscription: (_, actions) => {
-            const plan = document.body.classList.contains('discount-active')
-              ? PLAN_DISCOUNT
-              : PLAN_FULL;
-            return actions.subscription.create({ plan_id: plan });
-          },
-
-          onApprove: () => window.location.href = '/pages/dashboard.html',
-          onError: err => console.error('PayPal error:', err)
-        }).render('#paypal-btn');          /* make sure this div exists */
-      </script>
-
-
-
-
-      <!-- the purple proxy button users actually click -->
-      <button id="paypalBuyNowBtn" class="buy-now-btn">
-        <span class="btn-inner">
-          <img src="https://www.paypalobjects.com/images/shared/paypal-logo-129x32.svg" alt="PayPal"
-            class="pp-wordmark">
-          <span class="pp-label"></span>
-        </span>
-        <span id="paypalMount" class="paypal-overlay"></span>
-      </button>
-
-      <!-- PayPal – LIVE button -->
-      <!-- <div id="paypal-button-container-P-38P197067S4343902NB4O32Y"></div> -->
-
-      <!-- <script data-sdk-integration-source="button-factory"></script> -->
-
-      <!-- <script>
-        paypal.Buttons({
-          style: { shape: 'rect', color: 'gold', layout: 'vertical', label: 'paypal' },
-          createSubscription: (data, actions) =>
-            actions.subscription.create({ plan_id: 'P-38P197067S4343902NB4O32Y' }),
-          onApprove: data => window.location.href = '/pages/dashboard.html'
-        }).render('#paypal-button-container-P-38P197067S4343902NB4O32Y');
-      </script> -->
-
-      <!-- <div id="paypal-button-container-P-4FN65942RD4768921NB4PLMA"></div>
-<script src="https://www.paypal.com/sdk/js?client-id=AcygnP6DJSFGbIeyUa2BdGdznCQQk-qXjMEMijIZJeTbzkIltNVCGL5k1i2DdcNR24qoGTDPF_FD_VQ8&vault=true&intent=subscription" data-sdk-integration-source="button-factory"></script>
-<script>
-  paypal.Buttons({
-      style: {
-          shape: 'rect',
-          color: 'gold',
-          layout: 'vertical',
-          label: 'paypal'
-      },
-      createSubscription: function(data, actions) {
-        return actions.subscription.create({
-          /* Creates the subscription */
-          plan_id: 'P-4FN65942RD4768921NB4PLMA'
+            }).render('#paypal-btn');
+          } catch (e) {
+            console.error(e);
+            alert('Could not initialise PayPal. Please refresh and try again.');
+          }
         });
-      },
-      onApprove: function(data, actions) {
-        alert(data.subscriptionID); // You can add optional success message for the subscriber here
-      }
-  }).render('#paypal-button-container-P-4FN65942RD4768921NB4PLMA'); // Renders the PayPal button
-</script> -->
+      </script>
 
 
       <!-- Stripe -->
@@ -1048,28 +1024,9 @@ src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
   <!-- leave Stripe.js -->
 
   <!-- then YOUR payment.js – pick one path and delete the other -->
-  <script src="../scripts/paypal.js?v=20250716"></script>
+  <!-- <script src="../scripts/paypal.js?v=20250716"></script> -->
   <script src="../scripts/payment.js?v=20250711"></script>
 
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const realMount = document.getElementById('paypalMount'); // <— changed
-      const proxyBtn = document.getElementById('paypalBuyNowBtn');
-      if (!realMount || !proxyBtn) return;
-
-      const poll = setInterval(() => {
-        const iframe = realMount.querySelector('iframe');
-        if (!iframe) return;        // SDK not ready yet
-
-        clearInterval(poll);
-        proxyBtn.disabled = false;  // make the button solid / clickable
-        proxyBtn.addEventListener('click', () => {
-          iframe.contentWindow.focus();
-          iframe.click();
-        });
-      }, 200);
-    });
-  </script>
 </body>
 
 </html>
