Updated TOS & RP

--- a/client/pages/accessibility-statement.html
+++ b/client/pages/accessibility-statement.html
@@ -14,7 +14,7 @@
 <body>
   <div class="header">
     <div class="logo">
-      <a href="index.html">
+      <a href="../index.html">
         <img src="../assets/rtb-logo-white.png" alt="Logo">
       </a>
     </div>
