--- a/client/pages/contact-us.html
+++ b/client/pages/contact-us.html
@@ -13,7 +13,7 @@
 <body>
   <header class="header">
     <div class="logo">
-      <a href="index.html">
+      <a href="../index.html">
         <img src="../assets/rtb-logo-white.png" alt="Raising The Bar Logo">
       </a>
     </div>
