--- a/client/pages/cookie-policy.html
+++ b/client/pages/cookie-policy.html
@@ -13,7 +13,7 @@
 <body>
   <div class="header">
     <div class="logo">
-      <a href="index.html">
+      <a href="../index.html">
         <img id="logo" src="../assets/rtb-logo-white.png" alt="Raising The Bar Logo" />
       </a>
     </div>
