--- a/client/pages/legal-overview.html
+++ b/client/pages/legal-overview.html
@@ -11,7 +11,7 @@
 <body>
   <div class="header">
     <div class="logo">
-      <a href="index.html">
+      <a href="../index.html">
         <img src="../assets/rtb-logo-white.png" alt="Raising The Bar Logo" class="logo">
       </a>
     </div>
