--- a/client/pages/tos.html
+++ b/client/pages/tos.html
@@ -74,7 +74,13 @@ Both names describe the same service and grant access to premium features.</li>
     <!-- 6. PURCHASES, BILLING & CANCELLATION -->
     <h2>6. Purchases, Billing & Cancellation</h2>
     <!-- <p><strong>6.1 One‑Time Programs.</strong> Fees are due in full at checkout and grant access only for the specified program length. No automatic renewal occurs.</p> -->
-    <p><strong>6.2 Subscriptions.</strong> Subscription fees are billed in advance on a monthly basis and renew automatically until cancelled. By subscribing, you authorize us (and our payment processor) to charge your selected payment method each Billing Cycle. If a promotional/intro price applies, your plan renews at the standard price thereafter unless cancelled. We will notify you of any future price changes in advance, and such changes apply from your next renewal.</p>
+    <p><strong>6.2 Subscriptions.</strong> Subscriptions may begin with a free trial period (for example, 7 days of free access). 
+Unless you cancel before the end of the trial, your selected payment method will automatically be charged 
+the standard monthly fee of £49.99 at the conclusion of the trial, and will continue to renew automatically each month thereafter 
+until cancelled. By subscribing, you authorize us (and our payment processor) to charge your selected payment method for 
+the monthly subscription fee following any free trial. We will notify you of any future price changes in advance, and such changes 
+apply from your next renewal.</p>
+
 
 
 <p><strong>6.3 Cancellation of Subscriptions.</strong></p>
