Updated Free Trial Period Duration

--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -568,9 +568,9 @@
         By proceeding, you confirm that you’ve read and agree to our
         <a href="tos.html" target="_blank">terms of service</a> and
         <a href="refund-policy.html" target="_blank">refund policy</a>.
-        If you choose the 12-Week Plan, it renews at <span class="renew-amt"></span>/month unless cancelled.
-        Cancellations take effect at the end
-        of the current billing cycle.
+        The trial lasts for 3 days. If you choose the 12-Week Plan, it renews at
+        <span class="renew-amt"></span>/month unless cancelled.
+        Cancellations take effect at the end of the current billing cycle.
       </p>
 
   </section>
