Updated Offer Page

--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -937,12 +937,12 @@ body: JSON.stringify(payload)
     <div class="modal-content">
       <span class="close">&times;</span>
 
-      <h2 id="valueModalHeader">🎉 , you've been selected — start now for just 99p</h2>
+      <h2 id="valueModalHeader"></h2>
 
-      <p class="subtext">
-        <strong>Most plans fail because they're too rigid</strong><br><br>
-        This one adapts as you go - based on your real results.
-      </p>
+ <p class="subtext">
+      <strong>A promo code has been automatically applied</strong><br><br>
+      Start today for <strong>FREE</strong> — experience the full plan risk-free.
+    </p>
 
       <ul class="feature-list">
         <li>✓ Miss a workout? Your plan adjusts.</li>
@@ -956,10 +956,10 @@ body: JSON.stringify(payload)
 
       <div class="modal-actions">
         <button id="valueContinue" class="primary-btn">Continue</button>
-        <a id="valueDemo" href="https://www.youtube.com/shorts/H_aOWlPujIg" target="_blank" rel="noopener"
+        <!-- <a id="valueDemo" href="https://www.youtube.com/shorts/H_aOWlPujIg" target="_blank" rel="noopener"
           class="secondary-btn">
           Watch&nbsp;Demo
-        </a>
+        </a> -->
       </div>
       <p class="urgency-note">
         ⏳ <strong>Claim your plan before the discount ends.</strong>
