Updated Offer Page

--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -420,9 +420,9 @@
     </section>
     <h3 class="offer-heading" id="path-to-progress">Pick Your Path to Progress</h3>
     <p class="plan-diff-text">
-      Other apps just track.
+      <!-- Other apps just track.
       <strong>We use what you track to adapt workouts & meals</strong> so you
-      <strong>get fit faster</strong>.<br>
+      <strong>get fit faster</strong>.<br> -->
 
       <a href="#" id="comparePlansLink" class="compare-pill">
         🔎 See how it compares
@@ -721,7 +721,7 @@ body: JSON.stringify(payload)
         Loading
       </p>
       <p id="postPayNote" class="post-pay-note" style="display:none;text-align:center;margin-top:12px;">
-        ✅ <strong>After payment, your 12‑Week Plan unlocks immediately</strong> – you’ll be taken to your dashboard.
+        ✅ <strong>After your free checkout, your 12-Week Plan unlocks immediately</strong> – you’ll be taken to your dashboard.
 
         <!-- ↓  wrap just this sentence ↓ -->
         <!-- <span id="paypalCancelNote" style="display:none;">
@@ -939,10 +939,9 @@ body: JSON.stringify(payload)
 
       <h2 id="valueModalHeader"></h2>
 
- <p class="subtext">
-      <strong>A promo code has been automatically applied</strong><br><br>
-      Start today for <strong>FREE</strong> — experience the full plan risk-free.
-    </p>
+      <p class="subtext">
+       <strong>Promo code automatically applied — ends in 10 minutes!</strong>
+      </p>
 
       <ul class="feature-list">
         <li>✓ Miss a workout? Your plan adjusts.</li>
