Updated Offer Page

--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -382,7 +382,7 @@
 
 
     <p class="testimonial-disclaimer">
-      Results may vary. This transformation was achieved using the <strong>12-Week Plan</strong>, part of our tailored
+      Results may vary. This transformation was achieved using the <strong>1-Week Plan</strong>, part of our tailored
       training system.
     </p>
   </div>
@@ -404,7 +404,7 @@
         <span class="discount-label">Discount Expires In:</span>
         <span class="time-remaining" id="countdownTimer">10:00</span>
       </div>
-      <p class="first-1000">🔥 1,500+ people unlocked their plan today.<br>You're next.</p>
+      <p class="first-1000">🔥 2,000+ people unlocked their plan today.<br>You're next.</p>
     </div>
 
     <!-- Offer Cards -->
@@ -414,8 +414,8 @@
         947 people bought workout plans in the last hour
       </p>
       <div class="social-proof__recent">
-        <span class="social-proof__tag">ava 12-Week Plan</span>
-        <span class="social-proof__tag">ethan 12-Week Plan</span>
+        <span class="social-proof__tag">ava 1-Week Plan</span>
+        <span class="social-proof__tag">ethan 1-Week Plan</span>
       </div>
     </section>
     <h3 class="offer-heading" id="path-to-progress">Pick Your Path to Progress</h3>
@@ -515,7 +515,7 @@
       <!-- Row 3: New Special Offer Card (Full Width) -->
       <div class="offer-card offer-special" data-program="new">
         <div class="offer-left">
-          <div class="duration"><strong>Pro Tracker</strong></div>
+          <div class="duration"><strong>1-Week Plan</strong></div>
           <div class="full-price" data-full-price="£29.99">
             <span class="price-strikethrough" id="priceSpecialFull">£29.99</span>
             <span class="discount-price" id="priceSpecialDiscount">£0.00</span>
@@ -549,6 +549,64 @@
         </div>
       </div>
 
+        <div class="offer-card offer-tier" data-program="4-week">
+        <div class="offer-left">
+          <div class="duration"><strong>4-Week Plan</strong></div>
+          <!-- <p class="card-subtext">Build momentum with a month of structured, progressive coaching.</p> -->
+          <div class="full-price" data-full-price="£39.99">
+            <span>£39.99</span>
+          </div>
+        </div>
+
+        <div class="offer-right">
+          <div class="currency-tag">GBP</div>
+          <div class="cost-per-day">
+            <strong>£1.43</strong>
+          </div>
+          <div class="per-day">per day</div>
+        </div>
+
+        <div class="additional-info" style="display: none;">
+          <h4>What you lock in</h4>
+          <ul class="offer-includes">
+            <li>🏋️ <strong>Progressive 4-week training blocks</strong> that evolve each week.</li>
+            <li>🍽️ <strong>Weekly meal frameworks</strong> adjusted to your calories and macros.</li>
+            <li>🧠 <strong>Accountability check-ins</strong> to keep you focused and on track.</li>
+          </ul>
+        </div>
+
+        <!-- <div class="toggle-details" style="cursor:pointer;">What’s Included?</div> -->
+      </div>
+
+      <div class="offer-card offer-tier" data-program="12-week">
+        <div class="offer-left">
+          <div class="duration"><strong>12-Week Plan</strong></div>
+          <!-- <p class="card-subtext">Go all-in with our flagship transformation program.</p> -->
+          <div class="full-price" data-full-price="£59.99">
+            <span>£59.99</span>
+          </div>
+        </div>
+
+        <div class="offer-right">
+          <div class="currency-tag">GBP</div>
+          <div class="cost-per-day">
+            <strong>£0.71</strong>
+          </div>
+          <div class="per-day">per day</div>
+        </div>
+
+        <div class="additional-info" style="display: none;">
+          <h4>Built for lasting change</h4>
+          <ul class="offer-includes">
+            <li>🏋️ <strong>12-week periodised training</strong> that adapts as you improve.</li>
+            <li>🍽️ <strong>Seasonal meal rotations</strong> with grocery lists and swap suggestions.</li>
+            <li>💬 <strong>Priority coach support</strong> with feedback every step of the way.</li>
+          </ul>
+        </div>
+
+        <!-- <div class="toggle-details" style="cursor:pointer;">What’s Included?</div> -->
+      </div>
+
       <p class="pricing-justification">
         Like having a personal trainer in your pocket — for less than the cost of one session.
       </p>
@@ -561,14 +619,14 @@
       </div>
 
       <p class="final-reassurance" id="offerDisclaimer">
-        Try the 12-Week Plan risk-free. Cancel anytime — no commitment, no hidden fees.
+        Try the 1-Week Plan risk-free. Cancel anytime — no commitment, no hidden fees.
       </p>
 
       <p class="offer-disclaimer">
         By proceeding, you confirm that you’ve read and agree to our
         <a href="tos.html" target="_blank">terms of service</a> and
         <a href="refund-policy.html" target="_blank">refund policy</a>.
-        The trial lasts for 1 day. If you choose the 12-Week Plan, it renews at
+        The trial lasts for 1 day. If you choose the 1-Week Plan, it renews at
         <span class="renew-amt"></span>/month unless cancelled.
         Cancellations take effect at the end of the current billing cycle.
       </p>
@@ -721,7 +779,7 @@ body: JSON.stringify(payload)
         Loading
       </p>
       <p id="postPayNote" class="post-pay-note" style="display:none;text-align:center;margin-top:12px;">
-        ✅ <strong>After your free checkout, your 12-Week Plan unlocks immediately</strong> – you’ll be taken to your dashboard.
+        ✅ <strong>After your free checkout, your 1-Week Plan unlocks immediately</strong> – you’ll be taken to your dashboard.
 
         <!-- ↓  wrap just this sentence ↓ -->
         <!-- <span id="paypalCancelNote" style="display:none;">
@@ -855,7 +913,7 @@ body: JSON.stringify(payload)
       <span class="close">&times;</span>
 
       <h2>Compare Plans</h2>
-      <p class="subtext">Here's what you unlock when using our 12-Week Plan.</p>
+      <p class="subtext">Here's what you unlock when using our 1-Week Plan.</p>
 
       <div class="table-wrapper">
         <table class="compare-table">
@@ -927,7 +985,7 @@ body: JSON.stringify(payload)
       </div>
 
       <p class="testimonial">
-        “I didn't realize how much I was missing until I unlocked the 12-Week Plan. It made everything click.”
+        “I didn't realize how much I was missing until I unlocked the 1-Week Plan. It made everything click.”
         - Alice, lost 7 kg
       </p>
     </div>
