Updated Forms Page

--- a/client/pages/forms.html
+++ b/client/pages/forms.html
@@ -98,14 +98,14 @@ src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
     </div>
 
     <div id="incentive-box">
-      <span class="incentive-text">🎁 Complete this quiz <strong>now</strong> to get your <strong>free 12-Week Plan</strong></span>
+      <span class="incentive-text">🎁 Complete this quiz <strong>now</strong> to get your <strong>free workout & meal plan</strong></span>
       <button id="incentive-close" aria-label="Close">&times;</button>
     </div>
 
     <div class="form-container form-wrapper">
       <div class="form-question">
         <h2>Question</h2>
-      </div>
+      </div> 
       <div class="form-options">
         <ol>
           <li class="button-like">Option 1</li>
@@ -116,9 +116,9 @@ src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
       </div>
       <label style="line-height: 1.4;">
         <p class="disclaimer">
-          <strong class="subheading">No other app does what we do.</strong><br><br>
+          <!-- <strong class="subheading">No other app does what we do.</strong><br><br>
           Other apps just track. <strong>We use what you track to adapt workouts & meals</strong> so you
-          <strong>get fit faster</strong>.<br><br>
+          <strong>get fit faster</strong>.<br><br> -->
           <strong>Complete this 60-second quiz</strong> to get a workout and meal plan tailored to how you train, eat,
           and recover.
 
